fixes first part of bug 109179 "replace NS_EscapeURL with NS_EscapeURLPart" r=andreas.otte@debitel.net sr=alecf@netscape.com